# opx-tools

./: .gitreview  Makefile.am  README.md  configure.ac  temp.diff
.github/: CODEOWNERS
cfg/init/: opx-autoconf.service
debian/: changelog  control  opx-tools.install  rules
lib/: opx_config_utils.py  opx_python_common_utils.py  opx_show_packages_utils.py  opx_show_system_status.py
man/: opx-chassis-beacon.1  opx-config-beacon.1  opx-config-global-switch.1  opx-config-interface.1  opx-config-lag.1  opx-config-log.1  opx-config-mac.1  opx-config-mirror.1  opx-config-route.1  opx-config-sflow.1  opx-config-vlan.1  opx-config-vrf.1  opx-interface-beacon.1  opx-show-alms.1  opx-show-global-switch.1  opx-show-interface-stats.1  opx-show-interface.1  opx-show-lag.1  opx-show-log.1  opx-show-mac.1  opx-show-mirror.1  opx-show-route.1  opx-show-sflow.1  opx-show-transceiver.1  opx-show-vlan.1  opx-show-vrf.1
scripts/lib/python/: opx_python_common_utils.py  opx_show_packages_utils.py  opx_show_system_status.py
