#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([opx-tools],[2.0.1+opx3],[ops-dev@lists.openswitch.net])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_MACRO_DIRS([m4])

AM_PATH_PYTHON

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
